いろいろな変更を加えた

--- a/ja/play/index.html
+++ b/ja/play/index.html
@@ -11,12 +11,17 @@
 <body>
     <div class="main-content">
     <header>
-        <h1>ランダムに選ばれたゲームを遊ぼう！</h1>
+        <p class="description">ランダムに選ばれたゲームを遊ぼう！</p>
     </header>
     <main>
-        <button id="play-button">ランダムなゲームを遊ぶ</button>
+        <button id="reload-button">別のゲームを遊ぶ</button>
     </main>
     </div>
+    <div class="user-input">
+        <label for="username">ユーザー名(任意):</label>
+        <input type="text" id="username" name="username" placeholder="ユーザー名を入力してください">
+    </div>
+    <iframe src="https://turbowarp.org/1166529417/embed" width="482" height="412" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <footer>
         <p>&copy; 2025 HungryDonguri | GitHubでホストされています。 | ライセンス : <a href="https://raw.githubusercontent.com/HungryDonguri/random/refs/heads/main/LICENSE">Apache License 2.0</a></p>
     </footer>
