英語対応させたりした

--- a/en/play/index.html
+++ b/en/play/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <!--Copyright 2025 HungryDonguri-->
-<html lang="ja">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ランダムに選ばれたゲームを遊ぼう！</title>
+    <title>Play a Randomly Selected Game!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
     <div class="main-content">
     <header>
-        <p class="description">ランダムに選ばれたゲームを遊ぼう！</p>
+        <p class="description">Play a randomly selected game!</p>
     </header>
     <main>
-        <button id="reload-button">別のゲームを遊ぶ</button>
+        <button id="reload-button">Play Another Game</button>
     </main>
     </div>
     <div class="user-input">
-        <label for="username">ユーザー名(任意):</label>
-        <input type="text" id="username" name="username" placeholder="ユーザー名を入力してください">
+        <label for="username">Username (optional):</label>
+        <input type="text" id="username" name="username" placeholder="Enter your username">
     </div>
     <iframe src="https://turbowarp.org/1166529417/embed" width="482" height="412" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <footer>
-        <p>&copy; 2025 HungryDonguri | GitHubでホストされています。 | ライセンス : <a href="https://raw.githubusercontent.com/HungryDonguri/random/refs/heads/main/LICENSE">Apache License 2.0</a></p>
+        <p>&copy; 2025 HungryDonguri | Hosted on GitHub. | License: <a href="https://raw.githubusercontent.com/HungryDonguri/random/refs/heads/main/LICENSE">Apache License 2.0</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
