さらにいろいろな変更を加えた

--- a/ja/play/index.html
+++ b/ja/play/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ランダムに選ばれたゲームを遊ぼう！</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="../../play.css">
+    <link rel="icon" type="image/x-icon" href="../../favicon.ico">
 </head>
 <body>
     <div class="main-content">
@@ -18,12 +18,11 @@
     </main>
     </div>
     <div class="user-input">
-        <label for="username">ユーザー名(任意):</label>
         <input type="text" id="username" name="username" placeholder="ユーザー名を入力してください">
     </div>
     <iframe src="https://turbowarp.org/1166529417/embed" width="482" height="412" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <footer>
         <p>&copy; 2025 HungryDonguri | GitHubでホストされています。 | ライセンス : <a href="https://raw.githubusercontent.com/HungryDonguri/random/refs/heads/main/LICENSE">Apache License 2.0</a></p>
     </footer>
-    <script src="script.js"></script>
+    <script src="../../play.js"></script>
 </body>
