使い方やメモクレを表示するようにした。
API処理にめちゃくちゃ苦労した。

--- a/en/play/index.html
+++ b/en/play/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Copyright 2025 HungryDonguri-->
-<html lang="en">
+<html lang="en"></html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,12 @@
     <div class="user-input">
         <input type="text" id="username" name="username" placeholder="Enter your username">
     </div>
+    <h1><a id="d-title"></a></h1>
     <iframe src="https://turbowarp.org/1166529417/embed" width="482" height="412" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <h1 id="instr">Instructions</h1>
+    <p class="infotext" id="instr-text"></p>
+    <h1 id="memocre">Notes and Credits</h1>
+    <p class="infotext" id="memocre-text"></p>
     <footer>
         <p>&copy; 2025 HungryDonguri | Hosted on GitHub. | License: <a href="https://raw.githubusercontent.com/HungryDonguri/random/refs/heads/main/LICENSE">Apache License 2.0</a></p>
     </footer>
