--- a/ja/play/index.html
+++ b/ja/play/index.html
@@ -20,7 +20,12 @@
     <div class="user-input">
         <input type="text" id="username" name="username" placeholder="ユーザー名を入力してください">
     </div>
+    <h1><a id="d-title"></a></h1>
     <iframe src="https://turbowarp.org/1166529417/embed" width="482" height="412" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <h1 id="instr">使い方</h1>
+    <p class="infotext" id="instr-text"></p>
+    <h1 id="memocre">メモとクレジット</h1>
+    <p class="infotext" id="memocre-text"></p>
     <footer>
         <p>&copy; 2025 HungryDonguri | GitHubでホストされています。 | ライセンス : <a href="https://raw.githubusercontent.com/HungryDonguri/random/refs/heads/main/LICENSE">Apache License 2.0</a></p>
     </footer>
